# backend_ahmedelatar_musicplatform

./: RESULTS.md  auth_client.py  db.sqlite3  pyproject.toml
accounts/: urls.py  views.py
accounts/temlates/: base.html
album/: admin.py  forms.py  models.py  urls.py  views.py  widget.py
album/migrations/: 0001_initial.py  0002_album_album_is_approved.py  0002_alter_album_creation_time.py  0003_alter_album_creation_time.py  0003_remove_album_creation_time_album_created_and_more.py  0004_song.py
album/templates/: add_album.html
artists/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_rename_album_cost_album_album_cost_and_more.py  0002_rename_social_link_artist_social_link_and_more.py
artists/static/: style.css
artists/templates/: add_artist.html
artists/tests/: test_views.py
authentication/: serializers.py  urls.py  views.py
authentication/tests/: test_views.py
musicplatform/: manage.py  settings.py  urls.py
musicplatform/musicplatform/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_views.py
