[tool.poetry]
name = "backend-ahmedelatar-music-paltform"
version = "0.1.0"
description = ""
authors = ["AhmedElatar <ahmedmohamed00775@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_ahmedelatar_music_paltform"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
